force-app/main/default/objects/Credit_Limit_Application__c/fields/Latest_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Shipping_Date__c</fullName>
    <label>Latest Date of Shipment</label>
    <type>Date</type>
</CustomField>