force-app/main/default/objects/Credit_Limit_Application__c/fields/Letter_of_Credit_Amount_RAND__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit_Amount_RAND__c</fullName>
    <label>Credit Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>