force-app/main/default/objects/Credit_Limit_Application__c/fields/Letter_of_Credit_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit_Amount_USD__c</fullName>
    <label>Letter of Credit Amount (USD)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>