force-app/main/default/objects/Credit_Limit_Application__c/fields/Letter_of_Credit_Number__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit_Number__c</fullName>
    <label>Letter of Credit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>