force-app/main/default/objects/Credit_Limit_Application__c/fields/Maximum_Turnover_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Turnover_Per_Order__c</fullName>
    <label>Maximum Turnover Per Order</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>