force-app/main/default/objects/Credit_Limit_Application__c/fields/Net_Advance__c.field-meta.xml
<CustomField>
    <fullName>Net_Advance__c</fullName>
    <label>Advance payment amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>