force-app/main/default/objects/Credit_Limit_Application__c/fields/Order_Plan__c.field-meta.xml
<CustomField>
    <fullName>Order_Plan__c</fullName>
    <label>Order Plan</label>
    <type>TextArea</type>
</CustomField>