force-app/main/default/objects/Credit_Limit_Application__c/fields/Orgnization__c.field-meta.xml
<CustomField>
    <fullName>Orgnization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the Correct Value !</errorMessage>
        <filterItems>
            <field>PickList__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Master_Data_Orgnization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PickList__c</referenceTo>
    <relationshipName>Credit_Limit_Application</relationshipName>
    <type>Lookup</type>
</CustomField>