force-app/main/default/objects/Credit_Limit_Application__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <default>true</default>
                <label>OA</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>LC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>DP</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>DA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>