force-app/main/default/objects/Credit_Limit_Application__c/fields/Paymode_Apply__c.field-meta.xml
<CustomField>
    <fullName>Paymode_Apply__c</fullName>
    <label>Paymode Apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>DP</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>OA/DA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>