force-app/main/default/objects/Credit_Limit_Application__c/fields/Possess_Guarantor_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Possess_Guarantor_Y_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possess Guarantor (Y/N)</label>
    <type>Checkbox</type>
</CustomField>