force-app/main/default/objects/Credit_Limit_Application__c/fields/Prospects_For_Cooperation_business__c.field-meta.xml
<CustomField>
    <fullName>Prospects_For_Cooperation_business__c</fullName>
    <label>Prospects For Cooperation/business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>