force-app/main/default/objects/Credit_Limit_Application__c/fields/Recommended_Billing_Period_days__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Billing_Period_days__c</fullName>
    <label>Recommended Billing Period (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>