force-app/main/default/objects/Credit_Limit_Application__c/fields/Rejection_of_Risk_Compensation_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Rejection_of_Risk_Compensation_Ratio__c</fullName>
    <label>Risk Compensation Rejection Ratio</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>