force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Asset_liability_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Asset_liability_Ratio__c</fullName>
    <label>Remark of Asset-liability Ratio</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>