force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Enterprise_Nature__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Enterprise_Nature__c</fullName>
    <label>Remark of Enterprise Nature</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>