force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Independent_Third_PE__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Independent_Third_PE__c</fullName>
    <label>Remark of Independent Third PE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>