force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Number_of_Employees__c</fullName>
    <label>Remark of Number of Employees</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>