force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Other_Information__c</fullName>
    <label>Remark of Other Information</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>