force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Risks_of_the_Country__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Risks_of_the_Country__c</fullName>
    <label>Remark of Risks of the Country</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>