force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Three_year_Average_SG_Rate__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Three_year_Average_SG_Rate__c</fullName>
    <label>Remark of Three-year Average SG Rate</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>