force-app/main/default/objects/Credit_Limit_Application__c/fields/Remark_of_Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Remark_of_Year_of_Establishment__c</fullName>
    <label>Remark of Year of Establishment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>