force-app/main/default/objects/Credit_Limit_Application__c/fields/Risk_Mgt_Comm_Approved_Rejected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mgt_Comm_Approved_Rejected_Comment__c</fullName>
    <label>Risk Mgt Comm Approved/Rejected Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>