force-app/main/default/objects/Credit_Limit_Application__c/fields/Risk_Mgt_Committee_Approver_Rejecter__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mgt_Committee_Approver_Rejecter__c</fullName>
    <label>Risk Mgt Committee Approver / Rejecter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>