force-app/main/default/objects/Credit_Limit_Application__c/fields/Risk_Post_Approved_Rejected_Time__c.field-meta.xml
<CustomField>
    <fullName>Risk_Post_Approved_Rejected_Time__c</fullName>
    <label>Risk Post Approved / Rejected Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>