force-app/main/default/objects/Credit_Limit_Application__c/fields/RR_Approval_Information__c.field-meta.xml
<CustomField>
    <fullName>RR_Approval_Information__c</fullName>
    <label>RR Approval Information</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>