force-app/main/default/objects/Credit_Limit_Application__c/fields/RR_Rejection_Person__c.field-meta.xml
<CustomField>
    <fullName>RR_Rejection_Person__c</fullName>
    <label>RR Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>