force-app/main/default/objects/Credit_Limit_Application__c/fields/RR_Rejection_Time__c.field-meta.xml
<CustomField>
    <fullName>RR_Rejection_Time__c</fullName>
    <label>RR Returned Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>