force-app/main/default/objects/Credit_Limit_Application__c/fields/Salesperson_Email__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Email</label>
    <type>Text</type>
</CustomField>