force-app/main/default/objects/Credit_Limit_Application__c/fields/Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Name__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot;+ &quot; &quot; +CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Name</label>
    <type>Text</type>
</CustomField>