force-app/main/default/objects/Credit_Limit_Application__c/fields/Score_of_Net_Income_Margin_of_SR__c.field-meta.xml
<CustomField>
    <fullName>Score_of_Net_Income_Margin_of_SR__c</fullName>
    <label>Score of Net Income Margin of SR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>