force-app/main/default/objects/Credit_Limit_Application__c/fields/Score_of_Risks_of_the_Country__c.field-meta.xml
<CustomField>
    <fullName>Score_of_Risks_of_the_Country__c</fullName>
    <label>Score of Risks of the Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>