force-app/main/default/objects/Credit_Limit_Application__c/fields/Score_of_Sales_Scale__c.field-meta.xml
<CustomField>
    <fullName>Score_of_Sales_Scale__c</fullName>
    <label>Score of Sales Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>