force-app/main/default/objects/Credit_Limit_Application__c/fields/Score_of_Three_year_Average_SG_Rate__c.field-meta.xml
<CustomField>
    <fullName>Score_of_Three_year_Average_SG_Rate__c</fullName>
    <label>Score of Three-year Average SG Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>