force-app/main/default/objects/Credit_Limit_Application__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>