force-app/main/default/objects/Credit_Limit_Application__c/fields/Template_Score__c.field-meta.xml
<CustomField>
    <fullName>Template_Score__c</fullName>
    <label>Template Score</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>