force-app/main/default/objects/Credit_Limit_Application__c/fields/Trade_Background__c.field-meta.xml
<CustomField>
    <fullName>Trade_Background__c</fullName>
    <label>Trade Background</label>
    <type>TextArea</type>
</CustomField>