force-app/main/default/objects/Credit_Limit_Application__c/fields/Transaction_Settlement_Method_2_3year__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Settlement_Method_2_3year__c</fullName>
    <label>Transaction Settlement Method 2 (3year)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>OA/DA</fullName>
            </value>
            <value>
                <fullName>预付款</fullName>
                <label>Advance payment</label>
            </value>
            <value>
                <fullName>即期LC</fullName>
                <label>Spot letter credit - LC</label>
            </value>
            <value>
                <fullName>远期LC</fullName>
                <label>Long-term credit - LC</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>DP</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>LC</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>Long-term credit - LC</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>OA</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>Spot letter credit - LC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>