force-app/main/default/objects/Credit_Limit_Application__c/fields/USA_State__c.field-meta.xml
<CustomField>
    <fullName>USA_State__c</fullName>
    <description>选择国家为美国时，必选</description>
    <inlineHelpText>This field must be filled in when the buyer&apos;s country is the United States; it is not required for other countries.</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
                <label>阿拉巴马州</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>阿拉斯加州</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>亚利桑那州</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>阿肯色州</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>加利福尼亚州</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>科罗拉多州</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>康涅狄格州</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>特拉华州</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>佛罗里达州</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>佐治亚州</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>夏威夷州</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>爱达荷州</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>伊利诺伊州</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>印第安纳州</label>
            </value>
            <value>
                <fullName>IA</fullName>
                <label>艾奥瓦州</label>
            </value>
            <value>
                <fullName>KS</fullName>
                <label>堪萨斯州</label>
            </value>
            <value>
                <fullName>KY</fullName>
                <label>肯塔基州</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>路易斯安那州</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>缅因州</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <label>马里兰州</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <label>麻萨诸塞州</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>密歇根州</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>明尼苏达州</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>密西西比州</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>密苏里州</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>蒙大拿州</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>内布拉斯加州</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>内华达州</label>
            </value>
            <value>
                <fullName>NH</fullName>
                <label>新罕布什尔州</label>
            </value>
            <value>
                <fullName>NJ</fullName>
                <label>新泽西州</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>