force-app/main/default/objects/Credit_Limit_Application__c/fields/Value_of_Asset_liability_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Asset_liability_Ratio__c</fullName>
    <label>Value of Asset-liability Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>