force-app/main/default/objects/Credit_Limit_Application__c/fields/Value_of_Enterprise_Nature__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Enterprise_Nature__c</fullName>
    <label>Value of Enterprise Nature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>