force-app/main/default/objects/Credit_Limit_Application__c/fields/Value_of_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Number_of_Employees__c</fullName>
    <label>Value of Number of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>