force-app/main/default/objects/Credit_Limit_Application__c/fields/Value_of_Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Year_of_Establishment__c</fullName>
    <label>Value of Year of Establishment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>