force-app/main/default/objects/Credit_Limit_Application__c/fields/Weights_of_Current_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Weights_of_Current_Ratio__c</fullName>
    <label>Weights of Current Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>